[project]
name = "text-moderation"
version = "0.1.0"
description = "Text moderation service with FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "loguru>=0.7.3",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]
